@@ -59,7 +59,7 @@
 , "bugs" :          { "mail" :  "node-mongodb-native@googlegroups.com"
                     , "url" :   "http://github.com/mongodb/node-mongodb-native/issues" }
 , "dependencies" : {
-  "bson": "0.1.1"
+  "bson": "0.1.2"
 }
 , "devDependencies": {
       "dox": "0.2.0"
@@ -75,7 +75,7 @@
 , "config":         { "native" : false }
 , "main":             "./lib/mongodb/index"
 , "directories" :   { "lib" : "./lib/mongodb" }
-, "engines" :       { "node" : ">=0.4.0" }
+, "engines" :       { "node" : ">=0.6.0" }
 , "scripts": { "test" : "make test_pure" }
 , "licenses" :    [ { "type" :  "Apache License, Version 2.0"
                     , "url" :   "http://www.apache.org/licenses/LICENSE-2.0" } ]
